kubernetes/apps/kube-system/cilium/app/networking.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-api
  annotations:
    lbipam.cilium.io/ips: 192.168.42.120
    external-dns.alpha.kubernetes.io/hostname: k8s.goyangi.io
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    k8s-app: kube-apiserver
    tier: control-plane
  ports:
    - name: https
      port: 6443
      protocol: TCP
      targetPort: 6443
